--- a/TrabajadoresFinish/Views/Trabajadores/Create.cshtml
+++ b/TrabajadoresFinish/Views/Trabajadores/Create.cshtml
@@ -32,12 +32,18 @@
                 </div>
             </div>
             <div class="col col-sm-12">
-                <div class="form-group">
-                    <div class="input text">
-                        <label asp-for="Sexo" class="control-label"></label>
-                        <input asp-for="Sexo" class="form-control" required />
-                        <span asp-validation-for="Sexo" class="text-danger"></span>
-                    </div>
+            
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" asp-for="Sexo" name="Sexo" value="M" id="flexRadioDefault1">
+                    <label class="form-check-label" for="flexRadioDefault1">
+                        Masculino
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" asp-for="Sexo" name="Sexo" value="F" id="flexRadioDefault2" checked>
+                    <label class="form-check-label" for="flexRadioDefault2">
+                        Femenino
+                    </label>
                 </div>
             </div>
             <div class="col col-sm-12">
