--- a/TrabajadoresFinish/Views/Trabajadores/Edit.cshtml
+++ b/TrabajadoresFinish/Views/Trabajadores/Edit.cshtml
@@ -33,12 +33,18 @@
                 </div>
             </div>
             <div class="col col-sm-12">
-                <div class="form-group">
-                    <div class="input text">
-                        <label asp-for="Sexo" class="control-label"></label>
-                        <input asp-for="Sexo" class="form-control" required />
-                        <span asp-validation-for="Sexo" class="text-danger"></span>
-                    </div>
+
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" asp-for="Sexo" name="Sexo" value="M" id="flexRadioDefault1">
+                    <label class="form-check-label" for="flexRadioDefault1">
+                        Masculino
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" asp-for="Sexo" name="Sexo" value="F" id="flexRadioDefault2" checked>
+                    <label class="form-check-label" for="flexRadioDefault2">
+                        Femenino
+                    </label>
                 </div>
             </div>
             <div class="col col-sm-12">
@@ -54,7 +60,7 @@
                 <div class="form-group">
                     <div class="input text">
                         <label asp-for="IdProvincia" class="control-label"></label>
-                        <select asp-for="IdProvincia" class="form-control" asp-items="ViewBag.IdDepartamento" id="comboProvincia" onchange="onchangeProvincia()"></select>
+                        <select asp-for="IdProvincia" class="form-control" asp-items="ViewBag.IdProvincia" id="comboProvincia" onchange="onchangeProvincia()"></select>
                         <span asp-validation-for="IdProvincia" class="text-danger"></span>
                     </div>
                 </div>
@@ -63,7 +69,7 @@
                 <div class="form-group">
                     <div class="input text">
                         <label asp-for="IdDistrito" class="control-label"></label>
-                        <select asp-for="IdDistrito" class="form-control" asp-items="ViewBag.IdDepartamento" id="comboDistrito"></select>
+                        <select asp-for="IdDistrito" class="form-control" asp-items="ViewBag.IdDistrito" id="comboDistrito"></select>
                         <span asp-validation-for="IdDistrito" class="text-danger"></span>
                     </div>
                 </div>
